# bvcmap

./: LICENSE  README.md  pyproject.toml
bvcmap/: __init__.py
bvcmap/cmap/: __init__.py  bvcmap.py  colortype.py  xycmap_modified.py
bvcmap/plot/: __init__.py  functions.py  scatter.py
demo/: demo.ipynb  demo_data.csv  sample_data.csv
